--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1,5 +1,6 @@
 CONFIG_LOCALVERSION="-友希那-Kernel-r10-LA.UM.8.6.r1-01900-89xx.0"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_VM_MAX_READAHEAD=2048
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
