--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -101,6 +101,8 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PWRUTILX=y
+CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
