arm64/configs: disable msm_watchdog
Signed-off-by: Dede Dindin Qudsy <xtrymind@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3812,8 +3812,8 @@ CONFIG_MSM_CPUSS_DUMP=y
 CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_DDR_HEALTH=y
 # CONFIG_MSM_HYP_DEBUG is not set
-CONFIG_MSM_WATCHDOG_V2=y
-CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
+# CONFIG_MSM_WATCHDOG_V2 is not set
+# CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC is not set
 # CONFIG_MSM_CORE_HANG_DETECT is not set
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
 CONFIG_MSM_CPU_PWR_CTL=y
