--- a/sound/soc/Makefile
+++ b/sound/soc/Makefile
@@ -34,4 +34,4 @@ obj-$(CONFIG_SND_SOC)	+= tegra/
 obj-$(CONFIG_SND_SOC)	+= txx9/
 obj-$(CONFIG_SND_SOC)	+= ux500/
 
-subdir-ccflags-y := -O3
+subdir-ccflags-y := -Os
