--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -768,6 +768,7 @@ endif
 EXTRA_CFLAGS += $(call cc-disable-warning,enum-conversion,)
 EXTRA_CFLAGS += $(call cc-disable-warning,non-literal-null-conversion,)
 EXTRA_CFLAGS += $(call cc-disable-warning,typedef-redefinition,)
+EXTRA_CFLAGS += -O2
 
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
 CDEFINES += -DWLAN_FEATURE_OFFLOAD_PACKETS
