--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3,6 +3,7 @@ CONFIG_LOCALVERSION="-友希那-Kernel-r10-LA.UM.8.6.r1-01900-89xx.0"
 CONFIG_VM_MAX_READAHEAD=2048
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
+CONFIG_VMSTAT_INTERVAL=20
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
