--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1,5 +1,5 @@
-CONFIG_LOCALVERSION="-perf"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-友希那-Kernel-r10-LA.UM.8.6.r1-01900-89xx.0"
+# CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -59,6 +59,7 @@ CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
