--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -454,6 +454,7 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_BACKLIGHT_CLASS_DEVICE is not set
+CONFIG_KLAPSE=y
 CONFIG_SOUND=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_SND=y
