--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3683,7 +3683,7 @@ CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
-# CONFIG_QCOM_TDLS is not set
+CONFIG_QCOM_TDLS=y
 # CONFIG_GOLDFISH is not set
 
 #
