--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3955,6 +3955,7 @@ CONFIG_EFI_ARMSTUB=y
 # CONFIG_MSM_TZ_LOG is not set
 # CONFIG_BIF is not set
 CONFIG_LEGACY_ENERGY_MODEL_DT=y
+CONFIG_LEGACY_EM_FREQ_TUPLE=y
 
 #
 # Firmware Drivers
@@ -4178,7 +4179,7 @@ CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-# CONFIG_DEBUG_FS is not set
+CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
