--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -504,20 +504,18 @@
 
 	qcom,msm-thermal {
 		compatible = "qcom,msm-thermal";
-		qcom,sensor-id = <9>;
-		qcom,poll-ms = <250>;
+		qcom,sensor-id = <9>, <10>, <11>, <12>,
+				<4>, <5>, <6>, <7>;
+		qcom,poll-ms = <1000>;
 		qcom,limit-temp = <60>;
-		qcom,temp-hysteresis = <10>;
-		qcom,freq-step = <2>;
-		qcom,core-limit-temp = <80>;
-		qcom,core-temp-hysteresis = <10>;
-		qcom,hotplug-temp = <105>;
-		qcom,hotplug-temp-hysteresis = <15>;
-		qcom,freq-mitigation-temp = <105>;
+		qcom,temp-hysteresis = <85>;
+		qcom,freq-step = <1>;
+		qcom,core-limit-temp = <70>;
+		qcom,core-temp-hysteresis = <75>;
+		qcom,freq-mitigation-temp = <95>;
 		qcom,freq-mitigation-temp-hysteresis = <15>;
-		qcom,freq-mitigation-value = <1036800>;
+		qcom,freq-mitigation-value = <1689600>;
 		qcom,therm-reset-temp = <115>;
-		qcom,online-hotplug-core;
 		qcom,synchronous-cluster-id = <0 1>;
 		qcom,synchronous-cluster-map = <0 4 &CPU0 &CPU1 &CPU2 &CPU3>,
 						<1 4 &CPU4 &CPU5 &CPU6 &CPU7>;
@@ -526,8 +524,8 @@
 		qcom,disable-vdd-mx;
 		qcom,disable-psm;
 		qcom,disable-ocr;
-		qcom,vdd-restriction-temp = <5>;
-		qcom,vdd-restriction-temp-hysteresis = <10>;
+		qcom,vdd-restriction-temp = <25>;
+		qcom,vdd-restriction-temp-hysteresis = <35>;
 		vdd-dig-supply = <&pm8953_s2_floor_level>;
 		vdd-gfx-supply = <&gfx_vreg_corner>;
 
