--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -461,7 +461,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CLEANCACHE=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
-CONFIG_CMA_DEBUGFS=y
+# CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
@@ -940,7 +940,7 @@ CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 CONFIG_L2TP=y
-CONFIG_L2TP_DEBUGFS=y
+# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -1138,7 +1138,7 @@ CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SWR=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
+# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -3728,7 +3728,7 @@ CONFIG_MSM_11AD=y
 CONFIG_MSM_SPMI=y
 CONFIG_MSM_SPMI_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
-CONFIG_MSM_SPMI_DEBUGFS_RO=y
+# CONFIG_MSM_SPMI_DEBUGFS_RO is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_MSM_CLK_CONTROLLER_V2=y
@@ -3816,8 +3816,8 @@ CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
-CONFIG_MSM_RPM_LOG=y
+# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
+# CONFIG_MSM_RPM_LOG is not set
 CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MSM_SCM=y
