--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -53,7 +53,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
 # CONFIG_USELIB is not set
 # CONFIG_AUDIT is not set
-CONFIG_HAVE_ARCH_AUDITSYSCALL=y
+# CONFIG_HAVE_ARCH_AUDITSYSCALL is not set
 
 #
 # IRQ subsystem
