--- a/jconfig.json
+++ b/jconfig.json
@@ -1,9 +1,9 @@
 {
   "kernel": {
-    "name": "Clarity Kernel | Xiaomi Redmi Note 4x",
+    "name": "Clarity Kernel | Mido",
     "version": "r16",
     "link": "https://sourceforge.net/projects/clarity-kernel/files/Mido/r16/Clarity-Kernel-Mido-r16-EAS-P-20200106-2149.zip/download",
-    "changelog_url": "https://forum.xda-developers.com/showpost.php?p\u003d80688015\u0026postcount\u003d2",
+    "changelog_url": "https://raw.githubusercontent.com/Nicklas373/kernel_xiaomi_msm8953-3.18-2/readme/changelog.txt",
     "date": "2020-01-06",
     "sha1": "2b61f9773dc67fa9e866e6544bd1287998e44b3e"
   },
