--- a/fkm-ota/pie/jconfig.json
+++ b/fkm-ota/pie/jconfig.json
@@ -3,7 +3,7 @@
     "name": "Clarity Kernel | Mido",
     "version": "r16",
     "link": "https://sourceforge.net/projects/clarity-kernel/files/Mido/r16/Clarity-Kernel-Mido-r16-EAS-P-20200106-2149.zip/download",
-    "changelog_url": "https://raw.githubusercontent.com/Nicklas373/kernel_xiaomi_msm8953-3.18-2/readme/changelog.txt",
+    "changelog_url": "https://raw.githubusercontent.com/Nicklas373/kernel_xiaomi_msm8953-3.18-2/readme/fkm-ota/changelog.txt",
     "date": "2020-01-06",
     "sha1": "2b61f9773dc67fa9e866e6544bd1287998e44b3e"
   },
