arch: arm: boot: msm thermal optimizations
Squashed commit from:
- LuizPauloDamaceno/android_kernel_msm8953_mido@a2a90f5#diff-bf03ddee4a4e16425c34ae496863e5b5
- LuizPauloDamaceno/android_kernel_msm8953_mido@f392349#diff-bf03ddee4a4e16425c34ae496863e5b5
- https://github.com/sileshn/android_kernel_xiaomi_mido/commit/870961bd6af2b9900b3e396db7911dbc62370fe3

actually i'm just pick several value for optimized thermal engine work, and not included qcom bcl change for battery,
due i don't understand how that will work '_'.

Signed-off-by: TheHitMan7 <krtik.vrma@gmail.com>
Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -507,14 +507,18 @@
 		qcom,sensor-id = <9>, <10>, <11>, <12>,
 				<4>, <5>, <6>, <7>;
 		qcom,poll-ms = <1000>;
-		qcom,limit-temp = <60>;
-		qcom,temp-hysteresis = <85>;
+		qcom,limit-temp = <70>;
+		qcom,temp-hysteresis = <12>;
 		qcom,freq-step = <1>;
-		qcom,core-limit-temp = <70>;
-		qcom,core-temp-hysteresis = <75>;
-		qcom,freq-mitigation-temp = <95>;
-		qcom,freq-mitigation-temp-hysteresis = <15>;
-		qcom,freq-mitigation-value = <1689600>;
+		qcom,core-limit-temp = <80>;
+		qcom,core-temp-hysteresis = <12>;
+		qcom,hotplug-temp = <105>;
+		qcom,hotplug-temp-hysteresis = <15>;
+		qcom,freq-mitigation-temp = <105>;
+		qcom,freq-mitigation-temp-hysteresis = <12>;
+		qcom,freq-mitigation-value = <2016000>;
+		qcom,cpu-sensors = "tsens_tz_sensor9", "tsens_tz_sensor10", "tsens_tz_sensor11", "tsens_tz_sensor12",
+                           "tsens_tz_sensor4", "tsens_tz_sensor5", "tsens_tz_sensor6", "tsens_tz_sensor7";
 		qcom,therm-reset-temp = <115>;
 		qcom,synchronous-cluster-id = <0 1>;
 		qcom,synchronous-cluster-map = <0 4 &CPU0 &CPU1 &CPU2 &CPU3>,
