ARM64/configs: mido: regenerate defconfig
Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -53,7 +53,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
 # CONFIG_USELIB is not set
 # CONFIG_AUDIT is not set
-CONFIG_HAVE_ARCH_AUDITSYSCALL=y
+# CONFIG_HAVE_ARCH_AUDITSYSCALL is not set
 
 #
 # IRQ subsystem
@@ -161,10 +161,10 @@ CONFIG_NET_NS=y
 CONFIG_SCHED_TUNE=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_CPUSETS_ASSIST=y
-CONFIG_CPUSET_BG="0-2"
+CONFIG_CPUSET_BG="0-1"
 CONFIG_CPUSET_CAMERA="0-7"
-CONFIG_CPUSET_FG="0-5"
-CONFIG_CPUSET_RESTRICTED="0-5"
+CONFIG_CPUSET_FG="0-3"
+CONFIG_CPUSET_RESTRICTED="0-3"
 CONFIG_CPUSET_SYSTEM_BG="0-3"
 CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
@@ -1051,6 +1051,9 @@ CONFIG_SOCKEV_NLMCAST=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
+# CONFIG_BT_RFCOMM is not set
+# CONFIG_BT_BNEP is not set
+# CONFIG_BT_HIDP is not set
 
 #
 # Bluetooth device drivers
@@ -2163,7 +2166,6 @@ CONFIG_SMB135X_CHARGER=y
 # CONFIG_QPNP_CHARGER is not set
 CONFIG_QPNP_SMBCHARGER=y
 # CONFIG_QPNP_SMB2 is not set
-CONFIG_QPNP_LEGACY_CYCLE_COUNT=y
 # CONFIG_FUELGAUGE_STC3117 is not set
 CONFIG_QPNP_FG=y
 # CONFIG_QPNP_FG_GEN3 is not set
@@ -2332,6 +2334,7 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
+# CONFIG_LIMITS_LITE_HW is not set
 CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
@@ -3708,6 +3711,7 @@ CONFIG_SPS_SUPPORT_NDP_BAM=y
 # CONFIG_QPNP_VIBRATOR is not set
 CONFIG_IPA=y
 # CONFIG_IPA3 is not set
+CONFIG_IPA_WAKELOCK=y
 # CONFIG_GSI is not set
 CONFIG_RMNET_IPA=y
 # CONFIG_MSM_MHI is not set
@@ -3811,7 +3815,7 @@ CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_MSM_RPM_SMD=y
 # CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 # CONFIG_MSM_RPM_LOG is not set
-# CONFIG_MSM_RPM_STATS_LOG is not set
+CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_SCM_XPU=y
@@ -4177,7 +4181,7 @@ CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=0
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
@@ -4476,7 +4480,7 @@ CONFIG_CRC32_SLICEBY8=y
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_XXHASH=y
-CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
+# CONFIG_AUDIT_ARCH_COMPAT_GENERIC is not set
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
