ARM64/configs: mido: regenerate defconfigs
"Optimize defconfig"

* decrease vmstat interval https://github.com/orgesified/icecold/commit/d3c729b5b67a731630557c62cfebfae9bdd18f01
* Do not delay a panic https://github.com/orgesified/icecold/commit/9b210b7bcbcd2517ced8e16f25e10d111a5186d3
* Do not use readahead https://github.com/orgesified/icecold/commit/479d3e46f74a99ce7f8f0f1b2ec0e3e583905f0c
* Use a tick rate of 80 Hz https://github.com/orgesified/icecold/commit/c4acf29b65b31dce640e9589fc0e190ca45362e7
* Allow all archs to select optimized inlining  https://github.com/Nicklas373/kernel_xiaomi_msm8953-3.18-2/commit/f0331892a5386e5aded11ffda76903714cdde316

Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -415,11 +415,7 @@ CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ_100=y
-# CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ=80
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -453,6 +449,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
+# CONFIG_READAHEAD is not set
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
@@ -468,12 +465,11 @@ CONFIG_ZSMALLOC=y
 CONFIG_ZSMALLOC_STAT=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_ZCACHE is not set
-# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
-CONFIG_VMSTAT_INTERVAL=20
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_VMSTAT_INTERVAL=10
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
-CONFIG_VM_MAX_READAHEAD=128
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -4184,6 +4180,8 @@ CONFIG_FRAME_WARN=0
 # CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
+CONFIG_OPTIMIZE_INLINING=y
+CONFIG_ARCH_SUPPORTS_OPTIMIZED_INLINING=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 # CONFIG_FRAME_POINTER is not set
 # CONFIG_MAGIC_SYSRQ is not set
@@ -4203,7 +4201,7 @@ CONFIG_HAVE_ARCH_KASAN=y
 #
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
-CONFIG_PANIC_TIMEOUT=5
+CONFIG_PANIC_TIMEOUT=-1
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
