ARM64/configs: mido: regenerate defconfig
Rebasing from r17 base done, now let's see what change after merge pelt optimization

Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -53,7 +53,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
 # CONFIG_USELIB is not set
 # CONFIG_AUDIT is not set
-# CONFIG_HAVE_ARCH_AUDITSYSCALL is not set
+CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 
 #
 # IRQ subsystem
@@ -1233,6 +1233,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
+# CONFIG_FORCE_FAST_CHARGE is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1622,6 +1623,7 @@ CONFIG_ATH_CARDS=y
 # CONFIG_CLD_HL_SDIO_CORE is not set
 CONFIG_CLD_LL_CORE=y
 # CONFIG_CNSS_LOGGER is not set
+# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
 # CONFIG_CNSS2 is not set
 # CONFIG_CNSS_UTILS is not set
 
@@ -2161,6 +2163,7 @@ CONFIG_SMB135X_CHARGER=y
 # CONFIG_QPNP_CHARGER is not set
 CONFIG_QPNP_SMBCHARGER=y
 # CONFIG_QPNP_SMB2 is not set
+CONFIG_QPNP_LEGACY_CYCLE_COUNT=y
 # CONFIG_FUELGAUGE_STC3117 is not set
 CONFIG_QPNP_FG=y
 # CONFIG_QPNP_FG_GEN3 is not set
@@ -3953,6 +3956,7 @@ CONFIG_EFI_ARMSTUB=y
 # CONFIG_BIF is not set
 CONFIG_LEGACY_ENERGY_MODEL_DT=y
 CONFIG_LEGACY_EM_FREQ_TUPLE=y
+# CONFIG_AINUR_DTS_SW is not set
 
 #
 # Firmware Drivers
@@ -4176,7 +4180,7 @@ CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=0
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-# CONFIG_DEBUG_FS is not set
+CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_OPTIMIZE_INLINING=y
@@ -4477,7 +4481,7 @@ CONFIG_CRC32_SLICEBY8=y
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_XXHASH=y
-# CONFIG_AUDIT_ARCH_COMPAT_GENERIC is not set
+CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
