--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-友希那-Kernel-r17-LA.UM.8.6.r1-02900-89xx.0"
+CONFIG_LOCALVERSION="-友希那-Kernel-r18-LA.UM.8.6.r1-04000-89xx.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -91,7 +91,7 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_TICK_CPU_ACCOUNTING is not set
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -415,7 +415,7 @@ CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=80
+CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -1233,7 +1233,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
-# CONFIG_FORCE_FAST_CHARGE is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -4180,7 +4180,7 @@ CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=0
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_OPTIMIZE_INLINING=y
@@ -4207,7 +4207,7 @@ CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=-1
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
-# CONFIG_SCHED_STACK_END_CHECK is not set
+CONFIG_SCHED_STACK_END_CHECK=y
 
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
