ARM64/configs: mido: regenerate defconfig
* Enable QNS System
* Drop USB External Type C Config
* Sync with general link updates

Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1227,8 +1227,6 @@ CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 # CONFIG_PROFILER is not set
 CONFIG_UID_SYS_STATS=y
-# CONFIG_USB_EXT_TYPE_C_PERICOM is not set
-# CONFIG_USB_EXT_TYPE_C_TI is not set
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QPNP_MISC is not set
 # CONFIG_UID_SYS_STATS_DEBUG is not set
@@ -2174,6 +2172,7 @@ CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
+CONFIG_QNS_SYSTEM=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
@@ -3827,7 +3826,7 @@ CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_GLINK=y
-CONFIG_MSM_GLINK_LOOPBACK_SERVER=y
+# CONFIG_MSM_GLINK_LOOPBACK_SERVER is not set
 CONFIG_MSM_GLINK_SMD_XPRT=y
 CONFIG_MSM_GLINK_SMEM_NATIVE_XPRT=y
 CONFIG_MSM_SMEM_LOGGING=y
