ARM64/configs: mido: regenerate defconfig
* Add config description for QNS System (needed after commit f682e1e4b28f857b499e6dd5e885f8db9b44b5ff)
* Regenerate LTO config

Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -180,7 +180,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-# CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION is not set
+CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -250,8 +250,9 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-# CONFIG_LTO is not set
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
+CONFIG_THINLTO=y
 # CONFIG_LTO_NONE is not set
 CONFIG_LTO_CLANG=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
@@ -1240,6 +1241,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_QNS_SYSTEM=y
 # CONFIG_C2PORT is not set
 
 #
