--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1344,6 +1344,17 @@ config DYNAMIC_STUNE_BOOST
 
 	  If unsure, say N.
 
+config STUNE_ASSIST
+	bool "Helper for setting up stune values from kernel"
+	depends on CGROUP_SCHEDTUNE
+	depends on ANDROID
+	help
+	  This option allows you to control which default settings you want
+	  to use for schedtune without need for ramdisk modifications
+	  (e.g. prefer_idle and boost values).
+
+	  Say N if unsure.
+
 config CPUSETS_ASSIST
 	bool "Cpuset configuration helper"
 	depends on CPUSETS
@@ -1402,15 +1413,6 @@ config DEFAULT_USE_ENERGY_AWARE
 	  via sysctl.
 
 	  Say N if unsure.
-
-config STUNE_ASSIST
-	bool "SchedTune configuration helper"
-	depends on SCHED_TUNE
-	depends on ANDROID
-	help
-	  This option enables in-kernel overrides for SchedTune values.
-
-	  If unsure, say N.
 
 config SYSFS_DEPRECATED
 	bool "Enable deprecated sysfs features to support old userspace tools"
