--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -161,6 +161,7 @@ CONFIG_NET_NS=y
 CONFIG_SCHED_TUNE=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_CPUSETS_ASSIST=y
+CONFIG_CPUSET_AUDIO="0-1"
 CONFIG_CPUSET_BG="0-1"
 CONFIG_CPUSET_CAMERA="0-7"
 CONFIG_CPUSET_FG="0-3"
