ARM64/config: mido: regenerate defconfig
Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3655,10 +3655,6 @@ CONFIG_SNAPPY_DECOMPRESS=y
 #
 # Android
 #
-CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
@@ -3944,6 +3940,14 @@ CONFIG_MSM_IRQ=y
 # CONFIG_MCB is not set
 CONFIG_RAS=y
 # CONFIG_THUNDERBOLT is not set
+
+#
+# Android
+#
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_SENSORS is not set
 CONFIG_SENSORS_SSC=y
 
