--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -758,7 +758,17 @@ ifneq ($(wildcard $(srctree)/arch/$(SRCARCH)/mach-msm/include/mach/msm_smsm.h),)
 CDEFINES += -DEXISTS_MSM_SMSM
 endif
 
-EXTRA_CFLAGS += $(call cc-option,-Wno-maybe-uninitialized) -Wno-unused-function -Wno-enum-conversion -Wno-array-bounds -Wno-pointer-bool-conversion -Wno-parentheses-equality -Wno-typedef-redefinition -Wno-empty-body -Wno-non-literal-null-conversion
+# Fix build for GCC 4.7
+EXTRA_CFLAGS += $(call cc-disable-warning,maybe-uninitialized,) -Wno-unused-function -Wno-unused-variable
+
+# Not gonna fix these warnings, clang!
+ifeq ($(cc-name),clang)
+EXTRA_CFLAGS += $(call cc-disable-warning,array-bounds,)
+EXTRA_CFLAGS += $(call cc-disable-warning, void-pointer-to-enum-cast)
+endif
+EXTRA_CFLAGS += $(call cc-disable-warning,enum-conversion,)
+EXTRA_CFLAGS += $(call cc-disable-warning,non-literal-null-conversion,)
+EXTRA_CFLAGS += $(call cc-disable-warning,typedef-redefinition,)
 
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
 CDEFINES += -DWLAN_FEATURE_OFFLOAD_PACKETS
