--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3698,6 +3698,7 @@ CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCOM_TDLS=y
+# CONFIG_WLAN_FEATURE_HOLD_RX_WAKELOCK is not set
 # CONFIG_GOLDFISH is not set
 
 #
