ARM64/configs: mido: regenerate defconfig
Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-友希那-Kernel-r18-LA.UM.8.6.r1-04000-89xx.0"
+CONFIG_LOCALVERSION="-友希那-Kernel-r18-LA.UM.8.6.r1-04200-89xx.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1269,7 +1269,6 @@ CONFIG_QNS_SYSTEM=y
 CONFIG_MSM_QDSP6V2_CODECS=y
 CONFIG_MSM_ULTRASOUND=y
 # CONFIG_MSM_MCU_TIME_SYNC is not set
-CONFIG_AINUR_DTS_HW=y
 
 #
 # Intel MIC Bus Driver
@@ -2961,6 +2960,7 @@ CONFIG_SND_SOC_QDSP6V2=y
 # CONFIG_SND_SOC_QDSP_DEBUG is not set
 CONFIG_DOLBY_DAP=y
 CONFIG_DOLBY_DS2=y
+CONFIG_DTS_EAGLE=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
@@ -3967,7 +3967,6 @@ CONFIG_EFI_ARMSTUB=y
 # CONFIG_BIF is not set
 CONFIG_LEGACY_ENERGY_MODEL_DT=y
 CONFIG_LEGACY_EM_FREQ_TUPLE=y
-# CONFIG_AINUR_DTS_SW is not set
 
 #
 # Firmware Drivers
