--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4090,6 +4090,7 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 # CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE_LAST_KMSG=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_F2FS_FS=y
